--- a/translations/fr/nearata-copy-code-to-clipboard.json
+++ b/translations/fr/nearata-copy-code-to-clipboard.json
@@ -1,8 +1,8 @@
 {
     "nearata-copy-code-to-clipboard": {
         "forum": {
-            "copy": "",
-            "copied": ""
+            "copy": "Cliquez pour copier",
+            "copied": "Copié dans le presse-papier"
         }
     }
 }
