--- a/translations/fr/nomiscz-auth-steam.json
+++ b/translations/fr/nomiscz-auth-steam.json
@@ -2,39 +2,39 @@
     "nomiscz-auth-steam": {
         "forum": {
             "buttons": {
-                "login": "",
-                "link": "",
-                "unlink": ""
+                "login": "Se connecter avec Steam",
+                "link": "Associer un compte Steam",
+                "unlink": "Dissocier un compte Steam"
             },
             "alerts": {
-                "already_linked": "",
-                "already_used": "",
-                "link_success": "",
-                "unlink_success": "",
-                "error": ""
+                "already_linked": "Le compte Steam est déjà associé.",
+                "already_used": "Le compte Steam est déjà associé à un autre utilisateur.",
+                "link_success": "L’association au compte Steam a réussi.",
+                "unlink_success": "La dissociation du compte Steam a réussi.",
+                "error": "Quelque chose c’est mal passé. Merci d’essayer plus tard!"
             },
             "modals": {
                 "link": {
-                    "title": ""
+                    "title": "Associer un compte Steam"
                 },
                 "unlink": {
-                    "title": "",
+                    "title": "Dissocier un compte Steam",
                     "info": {
-                        "confirm": "",
-                        "no_providers": ""
+                        "confirm": "Êtes-vous sûr de vouloir dissocier votre compte Steam?",
+                        "no_providers": "Vous n’avez pas d’autres fournisseurs de connexion. Vous devrez probablement réinitialiser votre mot de passe."
                     },
                     "buttons": {
-                        "confirm": "",
-                        "cancel": ""
+                        "confirm": "Oui, dissocier le compte",
+                        "cancel": "Non!"
                     }
                 }
             }
         },
         "admin": {
             "settings": {
-                "title": "",
-                "api_key_label": "",
-                "use_steam_powered_domain": ""
+                "title": "Paramètres d’authentification Steam",
+                "api_key_label": "Clé API",
+                "use_steam_powered_domain": "Utilisez le domaine steampowered.com au lieu de steamcommunity.com (bloqué en Chine)"
             }
         }
     }
