Importing "reflar-level-ranks" component from "https://raw.githubusercontent.com/rooaaar/lang-french-extended/master/locale/reflar-level-ranks.yml".

--- a/translations/fr/reflar-level-ranks.json
+++ b/translations/fr/reflar-level-ranks.json
@@ -2,18 +2,18 @@
     "reflar-level-ranks": {
         "admin": {
             "settings": {
-                "title": "",
-                "levelText": ""
+                "title": "Paramètres de Level Ranks",
+                "levelText": "Entrez le texte à afficher pour les points (ex.: rang, niveau)"
             }
         },
         "forum": {
             "desc": {
-                "expText": ""
+                "expText": "EXP"
             }
         },
         "lib": {
             "defaults": {
-                "level": ""
+                "level": "Niveau"
             }
         }
     }
