Importing "saleksin-auth-google" component from "https://raw.githubusercontent.com/rooaaar/lang-french-extended/master/locale/saleksin-auth-google.yml".

--- a/translations/fr/saleksin-auth-google.json
+++ b/translations/fr/saleksin-auth-google.json
@@ -2,14 +2,14 @@
     "saleksin-auth-google": {
         "admin": {
             "google_settings": {
-                "client_id_label": "",
-                "client_secret_label": "",
-                "title": ""
+                "client_id_label": "Identifiant du client",
+                "client_secret_label": "Clé secrète du client",
+                "title": "Paramètres Google"
             }
         },
         "forum": {
             "log_in": {
-                "with_google_button": ""
+                "with_google_button": "Connexion avec Google"
             }
         }
     }
