Importing "therealsujitk-gifs" component from "https://raw.githubusercontent.com/rooaaar/lang-french-extended/master/locale/therealsujitk-gifs.yml".

--- a/translations/fr/therealsujitk-gifs.json
+++ b/translations/fr/therealsujitk-gifs.json
@@ -2,18 +2,18 @@
     "therealsujitk": {
         "forum": {
             "gifs": {
-                "label": "",
-                "title": "",
-                "searchbar": "",
-                "search": "",
-                "loading": "",
-                "noresults": "",
-                "loadmore": ""
+                "label": "Insérer le GIF",
+                "title": "Selectionner un GIF",
+                "searchbar": "Chercher des GIFs",
+                "search": "Chercher",
+                "loading": "Chargement ...",
+                "noresults": "Aucun résultat",
+                "loadmore": "Charger plus"
             }
         },
         "admin": {
             "gifs": {
-                "giphyAPIkey": ""
+                "giphyAPIkey": "Clé API Giphy"
             }
         }
     }
