Importing "therealsujitk-hljs" component from "https://raw.githubusercontent.com/rooaaar/lang-french-extended/master/locale/therealsujitk-hljs.yml".

--- a/translations/fr/therealsujitk-hljs.json
+++ b/translations/fr/therealsujitk-hljs.json
@@ -2,7 +2,7 @@
     "therealsujitk": {
         "admin": {
             "hljs": {
-                "themename": ""
+                "themename": "Nom du thème"
             }
         }
     }
