--- a/translations/fr/justoverclock-guestengagement.json
+++ b/translations/fr/justoverclock-guestengagement.json
@@ -1,9 +1,9 @@
 {
     "flarum-ext-guestengagement": {
         "forum": {
-            "hello": "",
-            "whenucreate": "",
-            "uwillreceive": "",
+            "hello": "Bonjour! Vous semblez être intéressé par ce forum, mais vous n’avez pas encore créé de compte.",
+            "whenucreate": "Lorsque vous créez un compte, nous pouvons nous souvenir pour vous de ce que vous avez lu, afin que vous puissiez reprendre exactement là où vous vous êtes arrêté",
+            "uwillreceive": "Vous recevrez des notifications, ici ou par e-mail, lorsque quelqu’un vous répondra. Vous pouvez également « aimer » pour montrer votre appréciation.",
             "hellops": "",
             "whenucreateps": "",
             "uwillreceiveps": ""
