Remove outdated PL translation for kilowhat-custom-paths.

--- a/translations/pl/kilowhat-custom-paths.json
+++ b/translations/pl/kilowhat-custom-paths.json
@@ -47,8 +47,7 @@
                 },
                 "reset": "",
                 "disabled": "",
-                "redirect": "",
-                "title": "Niestandardowe ścieżki"
+                "redirect": ""
             }
         }
     }
