Cleanup outdated Polish translations.

--- a/translations/pl/antoinefr-online.json
+++ b/translations/pl/antoinefr-online.json
@@ -8,8 +8,7 @@
         "admin": {
             "settings": {
                 "displaymax": "Liczba wyświetlanych użytkowników",
-                "titleoflist": "Tytuł wyświetlany ponad listą",
-                "title": "Ustawienia"
+                "titleoflist": "Tytuł wyświetlany ponad listą"
             }
         }
     }
