--- a/translations/pl/askvortsov-pwa.json
+++ b/translations/pl/askvortsov-pwa.json
@@ -10,8 +10,7 @@
                     "description_text": "Możesz ustawić opis w podstawowych ustawieniach forum w panelu admina.",
                     "long_name_text": "Nazwa aplikacji wyświetlana użytkownikowi.",
                     "heading": "O forum",
-                    "short_name_text": "Nazwa aplikacji wyświetlana użytkownikowi, jeśli nie ma wystarczająco miejsca na wyświetlenie pełnej nazwy.",
-                    "name_text": "Wpisz pełną nazwę, która będzie używana przez PWA."
+                    "short_name_text": "Nazwa aplikacji wyświetlana użytkownikowi, jeśli nie ma wystarczająco miejsca na wyświetlenie pełnej nazwy."
                 },
                 "colors": {
                     "heading": "Kolory",
@@ -42,8 +41,7 @@
                 "no_name": "Aby Twoja aplikacja działała, musisz podać jej pełną nazwę.",
                 "key_gen_failed": "",
                 "suggest_gmp": "",
-                "success": "Nie wyryto żadnych potencjalnych problemów!",
-                "push_needs_gmp_and_web_push": "Rozszerzenie <code>gmp</code> oraz biblioteka <code>minishlink/web-push</code> (<code>composer require minishlink/web-push</code>) MUSZĄ być włączone, aby powiadomienia push działały."
+                "success": "Nie wyryto żadnych potencjalnych problemów!"
             }
         },
         "forum": {
