--- a/translations/pl/clarkwinkelmann-bookmarks.json
+++ b/translations/pl/clarkwinkelmann-bookmarks.json
@@ -17,8 +17,7 @@
         },
         "admin": {
             "settings": {
-                "independentButton": "Wyświetl osobny przycisk zakładki w sidebarze dyskusji, zamiast dodatkowej opcji w menu rozwijanym dyskusji",
-                "title": ""
+                "independentButton": "Wyświetl osobny przycisk zakładki w sidebarze dyskusji, zamiast dodatkowej opcji w menu rozwijanym dyskusji"
             }
         }
     }
