--- a/translations/pl/clarkwinkelmann-carving-contest.json
+++ b/translations/pl/clarkwinkelmann-carving-contest.json
@@ -46,13 +46,11 @@
                 "view": "Przeglądanie prac",
                 "like": "Polubienie prac",
                 "participate": "Uczestnictwo",
-                "moderate": "Moderacja",
-                "heading": "Zawody w rzeźbieniu"
+                "moderate": "Moderacja"
             },
             "settings": {
                 "maxEntriesPerUser": "Maksymalna liczba zgłoszeń na użytkownika",
-                "colorMode": "Użyj trybu kolorowania zamiast trybu rzeźbienia",
-                "title": "Ustawienia zawodów w rzeźbieniu"
+                "colorMode": "Użyj trybu kolorowania zamiast trybu rzeźbienia"
             },
             "colors": {
                 "simple": "Prosty zestaw kolorów",
