--- a/translations/pl/clarkwinkelmann-email-as-display-name.json
+++ b/translations/pl/clarkwinkelmann-email-as-display-name.json
@@ -3,12 +3,10 @@
         "admin": {
             "permissions": {
                 "view-own": "Przeglądanie adresu e-mail na własnym profilu",
-                "view-all": "Przeglądanie adresów e-mail na wszystkich profilach",
-                "heading": "Wyświetlaj e-mail zamiast nazwy użytkownika"
+                "view-all": "Przeglądanie adresów e-mail na wszystkich profilach"
             },
             "settings": {
-                "remove-username-registration": "Usuń pole na nazwę użytkownika z formularza rejestracyjnego",
-                "title": "Ustawienia rozszerzenia"
+                "remove-username-registration": "Usuń pole na nazwę użytkownika z formularza rejestracyjnego"
             }
         },
         "forum": {
