--- a/translations/pl/clarkwinkelmann-emojionearea.json
+++ b/translations/pl/clarkwinkelmann-emojionearea.json
@@ -11,9 +11,7 @@
                 "enableTones": "Włącz odcienie",
                 "filtersPosition": "Przenieś kategorie na dół",
                 "searchPosition": "Przenieś wyszukiwanie i odcienie na dół",
-                "hideFlarumButton": "Ukryj przycisk wyboru emoji od Flarum",
-                "title": "Ustawienia EmojioneArea",
-                "hideFlarumButtonHelp": "Rozszerzenie Emoji Picker musi być włączone po rozszerzeniu Emoji, aby to ustawienie działało"
+                "hideFlarumButton": "Ukryj przycisk wyboru emoji od Flarum"
             }
         }
     }
