--- a/translations/pl/clarkwinkelmann-first-post-approval.json
+++ b/translations/pl/clarkwinkelmann-first-post-approval.json
@@ -6,8 +6,7 @@
             },
             "settings": {
                 "discussionCount": "Liczba pierwszych dyskusji, które wymagają zatwierdzenia",
-                "postCount": "Liczba pierwszych postów, które wymagają zatwierdzenia",
-                "title": ""
+                "postCount": "Liczba pierwszych postów, które wymagają zatwierdzenia"
             }
         }
     }
