--- a/translations/pl/clarkwinkelmann-passwordless.json
+++ b/translations/pl/clarkwinkelmann-passwordless.json
@@ -14,8 +14,7 @@
                 "passwordless-login-by-default": "Logowanie bez hasła jako domyślne w okienku logowania",
                 "hide-sign-up-password": "Ukryj pole na hasło podczas rejestracji",
                 "token-life": "Czas ważności tokenów w minutach",
-                "mail-footer": "Treść stopki w wiadomości e-mail",
-                "title": "Ustawienia logowania bez hasła"
+                "mail-footer": "Treść stopki w wiadomości e-mail"
             }
         },
         "api": {
