--- a/translations/pl/clarkwinkelmann-see-past-first-post.json
+++ b/translations/pl/clarkwinkelmann-see-past-first-post.json
@@ -10,8 +10,7 @@
             },
             "settings": {
                 "hide-comment-count": "Ukryj liczbę odpowiedzi na liście dyskusji",
-                "hide-last-post": "Ukryj autora i datę ostatniej odpowiedzi na liście dyskusji",
-                "title": "Ustawienia dostępu do odpowiedzi"
+                "hide-last-post": "Ukryj autora i datę ostatniej odpowiedzi na liście dyskusji"
             }
         }
     }
