--- a/translations/pl/clarkwinkelmann-status.json
+++ b/translations/pl/clarkwinkelmann-status.json
@@ -3,8 +3,7 @@
         "admin": {
             "settings": {
                 "only-countries": "Tylko flagi krajów",
-                "enable-text": "Pozwól na tekstowy status",
-                "title": "Ustawienia statusów"
+                "enable-text": "Pozwól na tekstowy status"
             },
             "permissions": {
                 "see": "Dostęp do statusu użytkownika",
