--- a/translations/pl/clarkwinkelmann-who-read.json
+++ b/translations/pl/clarkwinkelmann-who-read.json
@@ -37,8 +37,7 @@
                 "see-read": "Wyświetlanie kto odczytał",
                 "see-subscription": "Wyświetlanie kto obserwuje",
                 "see-unread": "Wyświetlanie kto oznaczył jako nieodczytane",
-                "mark-unread": "Oznaczanie dyskusji jako nieodczytanej",
-                "heading": "Kto odczytał"
+                "mark-unread": "Oznaczanie dyskusji jako nieodczytanej"
             },
             "settings": {
                 "show-in-discussion-list": "Wyświetl na liście dyskusji informację, kto je odczytał",
@@ -48,8 +47,7 @@
                 "hide-when-behind": "Ukryj użytkowników całkowicie, jeśli nie odczytali co najmniej tylu postów",
                 "max-visible": "Maksymalna liczba użytkowników wyświetlanych przed \"czytaj więcej\"",
                 "unread-icon": "Ikona dla oznaczonych jako nieodczytane",
-                "only-groups": "Pokaż status odczytania tylko dla użytkowników należących do tych grup",
-                "title": "Ustawienia Kto odczytał"
+                "only-groups": "Pokaż status odczytania tylko dla użytkowników należących do tych grup"
             }
         }
     }
