--- a/translations/pl/fof-linguist.json
+++ b/translations/pl/fof-linguist.json
@@ -47,8 +47,7 @@
                 "frontend": "",
                 "frontend-all-except-admin": "",
                 "mass-edit": "",
-                "results": "Wyświetlono {shown} z {total} pasujących tłumaczeń",
-                "for-extension-unavailable": "Nie znaleziono żadnych tłumaczeń dla prefiksu \"{namespace}\". Możliwe, że to rozszerzenie nie posiada żadnych testów do przetłumaczenia lub korzysta z innego prefiksu. Spróbuj skorzystać z wyszukiwarki, aby znaleźć brakujące tłumaczenia.\n"
+                "results": "Wyświetlono {shown} z {total} pasujących tłumaczeń"
             },
             "clear-cache": {
                 "text": "Nowe tłumaczenia jeszcze nie zostały zastosowane. Uwaga: wyczyszczenie cache może chwilowo spowolnić Twoje forum.\n",
