--- a/translations/pl/fof-mason.json
+++ b/translations/pl/fof-mason.json
@@ -89,12 +89,7 @@
                 "fill-fields": "Uzupełnianie pól dla nowych dyskusji",
                 "update-own-fields": "Edycja pól we własnych dyskusjach",
                 "update-other-fields": "Edycja pól we wszystkich dyskusjach",
-                "skip-required-fields": "Pomijanie wymaganych pól",
-                "mason-heading": "Mason"
-            },
-            "menu": {
-                "title": "Mason",
-                "description": "Konfiguruj niestandardowe pola dyskusji."
+                "skip-required-fields": "Pomijanie wymaganych pól"
             }
         }
     }
