--- a/translations/pl/fof-moderator-notes.json
+++ b/translations/pl/fof-moderator-notes.json
@@ -18,8 +18,7 @@
                 "noNotes": "Wygląda na to, że nie ma tutaj żadnych notatek.",
                 "submit_button": "Zapisz notatkę",
                 "delete": "Usuń",
-                "confirm": "Czy jesteś pewien, że chcesz usunąć tę notatkę?",
-                "no_content_given": "Puste notatki nie są dozwolone."
+                "confirm": "Czy jesteś pewien, że chcesz usunąć tę notatkę?"
             },
             "user": {
                 "notes": "Notatki moderatorów"
