--- a/translations/pl/fof-recaptcha.json
+++ b/translations/pl/fof-recaptcha.json
@@ -5,8 +5,7 @@
                 "help_text": "Uzyskaj dane uwierzytelniające dla Google reCAPTCHA <a>tutaj</a>.",
                 "secret_key_label": "Secret Key",
                 "site_key_label": "Site Key",
-                "type_label": "reCAPTCHA Type",
-                "title": "FriendsOfFlarum reCAPTCHA"
+                "type_label": "reCAPTCHA Type"
             },
             "permissions": {
                 "post_without_captcha": "Tworzenie postów i dyskusji z pominięciem mechanizmu CAPTCHA"
