--- a/translations/pl/fof-user-directory.json
+++ b/translations/pl/fof-user-directory.json
@@ -39,9 +39,7 @@
                 "most_posts": "Najwięcej postów",
                 "least_posts": "Najmniej postów",
                 "most_discussions": "Najwięcej dyskusji",
-                "least_discussions": "Najmniej dyskusji",
-                "seen_recent": "Ostatnio online",
-                "seen_oldest": "Najdłużej offline"
+                "least_discussions": "Najmniej dyskusji"
             }
         }
     }
