--- a/translations/pl/ianm-html-head.json
+++ b/translations/pl/ianm-html-head.json
@@ -16,8 +16,7 @@
                 "text": "Upewnij się, że składnia jest prawidłowa, ponieważ możliwe jest zepsucie forum poprzez dodanie nieprawidłowych tagów w sekcji <code>head</code> forum. Po zapisaniu, włącz nowy element wykorzystując odpowiedni przełącznik.",
                 "description_label": "Opis",
                 "header_label": "Niestandardowy element w <code>head</code>",
-                "save_button": "Zapisz",
-                "title": ""
+                "save_button": "Zapisz"
             }
         }
     }
