--- a/translations/pl/itnt-uitab.json
+++ b/translations/pl/itnt-uitab.json
@@ -3,14 +3,7 @@
         "admin": {
             "settings": {
                 "help_text": "Jeśli Twoje Flarum jest zainstalowane w podkatalogu, podaj ścieżkę do podkatalogu (zakończoną ukośnikiem) w polu poniżej. W przeciwnym razie pozostaw domyślną wartość, np. <code>/sub/</code>.",
-                "home_page_label": "Podkatalog",
-                "requirement": "Rozszerzenie UI Tab musi być włączone po rozszerzeniu <code>flagrow/direct-links</code>, aby działać prawidłowo",
-                "title": "Ustawienia UI Tab",
-                "tags_title": "Ustawienia podkatalogu",
-                "tags_page_label": "Lista tagów",
-                "create_page_label": "Utwórz",
-                "settings_page_label": "Ustawienia",
-                "notifications_page_label": "Powiadomienia"
+                "home_page_label": "Podkatalog"
             }
         }
     }
