--- a/translations/pl/jslirola-login2seeplus.json
+++ b/translations/pl/jslirola-login2seeplus.json
@@ -13,13 +13,7 @@
             "image": "Obrazki",
             "code": "Kod",
             "post": {
-                "title": "Ukryj treść przekraczającą tę długość (wpisz <em>-1</em>, aby pokazać całość)",
-                "help": "Wpisz <em>-1</em> aby pokazać całą."
-            },
-            "php": {
-                "title": "Tryb legacy",
-                "help": "*NIE ZALECANE* Wykonuje przetwarzanie po stronie backendu, aby obsługiwać przestarzałe przeglądarki. Funkcje <code>mb_substr()</code> oraz <code>mb_strlen()</code> muszą być dostępne.",
-                "label": "Użyj PHP"
+                "title": "Ukryj treść przekraczającą tę długość (wpisz <em>-1</em>, aby pokazać całość)"
             }
         }
     }
