--- a/translations/pl/kilowhat-formulaire.json
+++ b/translations/pl/kilowhat-formulaire.json
@@ -142,8 +142,7 @@
                     "permission-see-own": "",
                     "permission-see-any": "",
                     "permission-edit-own": "",
-                    "permission-edit-any": "",
-                    "slug": ""
+                    "permission-edit-any": ""
                 },
                 "link-options": {
                     "standalone": "",
@@ -157,14 +156,7 @@
                 "email-notification-options": "",
                 "exiting-with-unsaved-data": "",
                 "preview": "",
-                "save-for-preview": "",
-                "template": "",
-                "expert-mode": "",
-                "restore": "",
-                "hide": "",
-                "delete": "",
-                "delete-confirmation": "",
-                "title": ""
+                "save-for-preview": ""
             },
             "auto-discussion-options-modal": {
                 "title": "",
@@ -339,10 +331,7 @@
                     "updated_at": "",
                     "hidden_at": ""
                 }
-            },
-            "submission-link-user-invalid": "",
-            "submission-link-discussion-invalid": "",
-            "submission-link-already-exists": ""
+            }
         },
         "mail": {
             "title-your-submission": "",
