--- a/translations/pl/maicol07-sso.json
+++ b/translations/pl/maicol07-sso.json
@@ -13,9 +13,7 @@
                 "jwt_section_subtitle": "Ustawienia JWT",
                 "jwt_iss": "Issuer Domain",
                 "jwt_signer_key": "Signer key",
-                "jwt_signing_algorithm": "Signing Method",
-                "disable_login_btn": "Wyłącz przycisk logowania",
-                "disable_signup_btn": "Wyłącz przycisk rejestracji"
+                "jwt_signing_algorithm": "Signing Method"
             }
         },
         "forum": {
