--- a/translations/pl/michaelbelgium-profile-views.json
+++ b/translations/pl/michaelbelgium-profile-views.json
@@ -9,8 +9,7 @@
         "admin": {
             "settings": {
                 "track_guests_label": "Zliczaj gości",
-                "max_viewcount_label": "Maksymalna liczba wyświetlanych odwiedzających",
-                "title": "Ustawienia wyświetleń profilu"
+                "max_viewcount_label": "Maksymalna liczba wyświetlanych odwiedzających"
             }
         }
     }
