--- a/translations/pl/migratetoflarum-fake-data.json
+++ b/translations/pl/migratetoflarum-fake-data.json
@@ -13,8 +13,7 @@
                 "date": "=> migratetoflarum-fake-data.ref.date",
                 "date-start-placeholder": "=> migratetoflarum-fake-data.ref.date-start-placeholder",
                 "date-interval-placeholder": "=> migratetoflarum-fake-data.ref.date-interval-placeholder",
-                "send": "=> migratetoflarum-fake-data.ref.send",
-                "title": "Generowanie danych testowych"
+                "send": "=> migratetoflarum-fake-data.ref.send"
             }
         },
         "forum": {
@@ -45,8 +44,7 @@
             "date": "Ustawienia daty",
             "date-start-placeholder": "Data początkowa (domyślnie aktualna data)",
             "date-interval-placeholder": "Interwał (domyślnie 1 sekunda)",
-            "send": "Wygeneruj dane",
-            "discussion-count": "Liczba dyskusji do utworzenia"
+            "send": "Wygeneruj dane"
         }
     }
 }
