--- a/translations/pl/nearata-copy-code-to-clipboard.json
+++ b/translations/pl/nearata-copy-code-to-clipboard.json
@@ -1,8 +1,7 @@
 {
     "nearata-copy-code-to-clipboard": {
         "forum": {
-            "copy": "Skopiuj do schowka",
-            "copied": "Skopiowano do schowka"
+            "copy": "Skopiuj do schowka"
         }
     }
 }
