--- a/translations/pl/therealsujitk-gifs.json
+++ b/translations/pl/therealsujitk-gifs.json
@@ -13,12 +13,7 @@
         },
         "admin": {
             "gifs": {
-                "giphyAPIkey": "Giphy API Key",
-                "title": "Ustawienia API GIFów"
-            },
-            "about": {
-                "stringA": "Rozszerzenie stworzone przez ",
-                "stringB": "Wesprzyj mnie przez "
+                "giphyAPIkey": "Giphy API Key"
             }
         }
     }
