--- a/translations/pl/therealsujitk-hljs.json
+++ b/translations/pl/therealsujitk-hljs.json
@@ -2,12 +2,7 @@
     "therealsujitk": {
         "admin": {
             "hljs": {
-                "themename": "Motyw",
-                "title": "highlight.js"
-            },
-            "about": {
-                "stringA": "Rozszerzenie stworzone przez ",
-                "stringB": "Wesprzyj mnie przez "
+                "themename": "Motyw"
             }
         }
     }
