--- a/translations/pl/therealsujitk-show-password.json
+++ b/translations/pl/therealsujitk-show-password.json
@@ -6,12 +6,7 @@
         "admin": {
             "show_password_type": "Wybierz typ przełącznika",
             "show_password_checkbox": "Checkbox",
-            "show_password_icon": "Ikona",
-            "show_password_title": "Ustawienia pokazywania hasła",
-            "about": {
-                "stringA": "Rozszerzenie stworzone przez ",
-                "stringB": "Wesprzyj mnie przez "
-            }
+            "show_password_icon": "Ikona"
         }
     }
 }
