--- a/translations/pl/clarkwinkelmann-popular-discussion-badge.json
+++ b/translations/pl/clarkwinkelmann-popular-discussion-badge.json
@@ -31,8 +31,7 @@
                 "within_placeholder": "wszystkie",
                 "hours": "h",
                 "and": "I",
-                "or": "LUB",
-                "title": ""
+                "or": "LUB"
             }
         }
     }
