--- a/translations/pl/fof-byobu.json
+++ b/translations/pl/fof-byobu.json
@@ -54,8 +54,7 @@
             },
             "user": {
                 "settings": {
-                    "block_pd": "Blokuj prywatne dyskusje",
-                    "unified_index": "Wyświetl prywatne dyskusje na liście dyskusji na forum"
+                    "block_pd": "Blokuj prywatne dyskusje"
                 },
                 "byobu_link": "Prywatne dyskusje",
                 "dropdown_label": "Prywatne dyskusje"
@@ -69,9 +68,6 @@
                 "pd_user_left_text": "{username} opuścił prywatną dyskusję",
                 "pd_added_text": "{username} dodał Cię do prywatnej dyskusji",
                 "pd_added_label": "Ktoś dodał mnie do istniejącej prywatnej dyskusji"
-            },
-            "confirm": {
-                "make_public": "To sprawi, że ta prywatna dyskusja będzie widoczna dla wszystkich. Upewnij się, że właśnie tego chcesz."
             }
         },
         "admin": {
