--- a/translations/pl/fof-links.json
+++ b/translations/pl/fof-links.json
@@ -17,8 +17,7 @@
                 "icon_text": "=> core.ref.icon_text",
                 "url_label": "=> fof-links.ref.url",
                 "url_placeholder": "=> fof-links.ref.url",
-                "visibility": "Widoczność linka",
-                "registered_only": ""
+                "visibility": "Widoczność linka"
             },
             "links": {
                 "create_button": "=> fof-links.ref.create_link",
